Fixed main page's overflow and footer nav bugs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,12 +12,15 @@ body {
     padding: 0;
     scroll-behavior: smooth;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 main {
     height: 100%;
     scroll-behavior: smooth;
     overflow-y: auto;
+    overflow-x: clip;
     @include hideScrollbar;
     // padding-right: 7px;
 
@@ -266,7 +269,6 @@ section {
 @media (max-width: 500px) {
     nav {
         min-height: 35px;
-        border-bottom: 1px solid white;
 
         a {
             visibility: hidden;
@@ -292,6 +294,7 @@ section {
         border-radius: 20px;
         transform: translateX(-50%);
         padding: .25em 1.2em;
+        z-index: 10;
 
         &__item {
             position: relative;
